docs(multiple): fix examples on small screens

--- a/src/components-examples/cdk-experimental/toolbar/toolbar-common.css
+++ b/src/components-examples/cdk-experimental/toolbar/toolbar-common.css
@@ -8,6 +8,7 @@
 
 .example-toolbar-controls {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 16px;
   padding-bottom: 4px;
